@@ -1,7 +1,5 @@
 package org.olf.reshare.dcb.item.availability;
 
-import static java.util.stream.Collectors.toList;
-
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.UUID;
@@ -10,26 +8,34 @@ import com.fasterxml.jackson.annotation.JsonFormat;
 
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.serde.annotation.Serdeable;
+import lombok.Builder;
 import lombok.Data;
 
 @Data
 @Serdeable
 public class AvailabilityResponseView {
 	private final List<Item> itemList;
+	private final List<Error> errors;
 	private final UUID clusteredBibId;
 
-	public static AvailabilityResponseView from(List<org.olf.reshare.dcb.core.model.Item> items,
+	public static AvailabilityResponseView from(AvailabilityReport report,
 		UUID clusteredBibId) {
 
-		final var mappedItems = items.stream()
+		final var mappedItems = report.getItems().stream()
 			.map(item -> new Item(item.getId(),
 				new Status(item.getStatus().getCode().name()), item.getDueDate(),
 				new Location(item.getLocation().getCode(), item.getLocation().getName()),
 				item.getBarcode(), item.getCallNumber(), item.getHostLmsCode(),
 				item.getIsRequestable(), item.getHoldCount()))
-			.collect(toList());
+			.toList();
 
-		return new AvailabilityResponseView(mappedItems, clusteredBibId);
+		final var mappedErrors = report.getErrors().stream()
+			.map(error -> Error.builder()
+				.message(error.getMessage())
+				.build())
+			.toList();
+
+		return new AvailabilityResponseView(mappedItems, mappedErrors, clusteredBibId);
 	}
 
 	@Data
@@ -59,5 +65,12 @@ public class AvailabilityResponseView {
 	public static class Location {
 		private final String code;
 		private final String name;
+	}
+
+	@Data
+	@Builder
+	@Serdeable
+	public static class Error {
+		private final String message;
 	}
 }
